# racah

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: bcd_fr.rs  sun_cgc.rs  sun_fr.rs  wigner.rs
doc/: katex-header.html
docs/: gauge.md  gauge_soN.md  references.md  theory.md
src/: bcd.rs  cache.rs  exact.rs  frcore.rs  lib.rs  primefactor.rs  su2.rs  sun.rs
src/bcd/: catalog.rs  fr.rs  linalg.rs  qspace_oracle_tests.rs  seeds.rs  sweep.rs  tests.rs
src/bcd/catalog/: tests.rs
src/bcd/fr/: tests.rs
src/bcd/seeds/: tests.rs
src/bcd/sweep/: tests.rs
src/sun/: cgc.rs  fr.rs  linalg.rs
tests/: base_cache_contract.rs  bcd_fingerprint.rs  bcd_fr.rs  fixtures_large.rs  fr_oracle.rs  generated_backend_identity.rs  generated_cache_contract.rs  groupmath_oracle.rs  isomorphism.rs  oracle.rs  properties.rs  su2_embedding.rs  su2_fingerprint.rs  sun_cgc_cache.rs  sun_cgc_fixtures.rs  sun_fingerprint.rs  sun_fr_cache.rs  sun_fr_gates.rs  sun_fr_su2.rs  sun_fr_su3_oracle.rs  sun_oracle.rs
tests/fixtures/: bcd_fixtures.json  groupmath_products.txt  qspace_cgc.txt  qspace_generators.txt  su2_6j_large.txt  su2_f.txt  su2_r.txt  su3_fr_r.txt  sun_cgc.txt
tests/fixtures/sun/: sun_fixtures.txt
tools/: README.md  gen_bcd_fixtures.jl  gen_bcd_fixtures.py  gen_fixtures.jl  gen_fr_fixtures.jl  gen_su3_fr_fixtures.jl  gen_sun_cgc_fixtures.jl  gen_sun_fixtures.jl
tools/groupmath/: gen_groupmath_products.wls
tools/qspace/: README.md  gen_qspace_cgc.m  gen_qspace_generators.m  getCG_maca64_sync.patch  getRC_maca64_sync.patch
