[package]
name = "racah"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Racah-Wigner calculus for compact Lie groups: exact SU(2) recoupling, and runtime Clebsch-Gordan / F- / R-coefficient generation for SU(N), SO(N), and Sp(2N)"
repository = "https://github.com/Ryo-wtnb11/racah"
keywords = ["representation-theory", "clebsch-gordan", "wigner", "lie-group", "6j"]
categories = ["mathematics", "science"]

[features]
default = []
# Runtime coefficient generation for SU(N)/SO(N)/Sp(2N).
# Pulls dense factorization and contraction kernels; the base crate stays
# dependency-light and covers the exact closed-form SU(2) path only.
cgc-gen = []

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[dev-dependencies]
# Oracle on the doubled-spin <= 254 overlap domain; pulls rug/GMP in tests
# only. Its CanonicalRegge6j u8 key is the defect class our key must not
# reproduce.
wigner-symbols = "=0.5.1"
rand = "0.8"
rand_chacha = "0.3"
